welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
  T(i)==getCouleurSol():Color
      ^